<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="296dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textv_operacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_operacion"
                android:textSize="28sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_clear"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_7"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_8"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_9"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_division"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_4"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_5"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_6"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_multi"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_1"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_2"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_3"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn_menos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_resta"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_punto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_punto"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>
                />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_cero"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn_igual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_igual"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>

            <Button
                android:id="@+id/btn_suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_suma"
                android:background="@color/colorFondo"
                style="?android:attr/borderlessButtonStyle"/>/>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>